<resources>
    <string name="app_name">Dolab</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="path">Path:</string>
    <string name="size">Size:</string>
    <string name="height">Height:</string>
    <string name="width">Width:</string>
    <string name="time">Time:</string>
    <string name="title">Title:</string>
    <string name="camera">camera</string>
    <string name="search">search</string>
    <string name="voice">voice</string>
    <string name="create_tag">create tag</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="change_language">Change Language</string>
    <string name="sort">sort</string>
    <string name="gallery">Gallery</string>
    <string name="no_album_found">No album found</string>
    <string name="no_image_found">No image found</string>
    <string name="messageAboutSpeech">Your Device Don\'t Support Speech Input</string>
    <string name="cancel">Cancel</string>
    <string name="albums">Albums</string>
    <string name="pictures">Pictures</string>

    <string-array name="language">
        <item>English</item>
        <item>Vietnamese</item>
        <item>Spanish</item>
        <item>Chinese</item>
    </string-array>
    <string-array name="shortformlanguage">
        <item>Eng</item>
        <item>Viet</item>
        <item>Span</item>
        <item>Ch</item>

    </string-array>
</resources>
