<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/ic_camera_alt_black_24dp"
        android:orderInCategory="9"
        android:title="@string/camera"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_black_24dp"
        android:orderInCategory="10"
        android:title="@string/search"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_voice_search"
        android:icon="@drawable/ic_keyboard_voice_black_second_24dp"
        android:orderInCategory="10"
        android:title="@string/voice"

        android:visible="true"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_create_album"
        android:title="@string/create_tag"
        android:visible="false"
        android:icon="@drawable/ic_iconfinder_price_tag_172526"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_rename"
        android:title="@string/rename"
        android:icon="@drawable/ic_rename"
        android:visible="false"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:visible="false"
        app:showAsAction="always"/>
    <group
        android:id="@+id/group_menu">
<!--    <item-->
<!--        android:id="@+id/action_change_language"-->
<!--        android:title="@string/change_language"-->

<!--        app:showAsAction="never"/>-->
    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        android:orderInCategory="40"
        android:icon="@drawable/ic_keyboard_arrow_down_black_24dp"
        app:showAsAction="always"/>

    </group>
</menu>