<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical" >
    <!--    android:layout_gravity="center_vertical"-->
    <!--    android:gravity="center"-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"

            android:orientation="vertical"

            android:layout_marginEnd="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/title_info_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/title"
                android:textSize="20sp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp" />

            <TextView
                android:id="@+id/title_info_dialog_real"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="20sp"
                 />

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/time_info_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/time"
                    android:textSize="20sp"
                    android:layout_marginRight="3dp"
                    android:layout_marginEnd="3dp" />

                <TextView
                    android:id="@+id/time_info_dialog_real"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="20sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/width_info_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/width"
                    android:textSize="20sp"
                    android:layout_marginRight="3dp"
                    android:layout_marginEnd="3dp" />

                <TextView
                    android:id="@+id/width_info_dialog_real"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="20sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/height_info_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/height"
                    android:textSize="20sp"
                    android:layout_marginRight="3dp"
                    android:layout_marginEnd="3dp" />

                <TextView
                    android:id="@+id/height_info_dialog_real"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="20sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/size_info_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/size"
                    android:textSize="20sp"
                    android:layout_marginRight="3dp"
                    android:layout_marginEnd="3dp" />

                <TextView
                    android:id="@+id/size_info_dialog_real"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="20sp"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/path_info_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/path"
                    android:textSize="20sp"
                    android:layout_marginRight="3dp"
                    android:layout_marginEnd="3dp" />

                <TextView
                    android:id="@+id/path_info_dialog_real"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textSize="20sp"
                    />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|right"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="close"
            android:src="@drawable/ic_close_black_black_24dp" />


    </FrameLayout>



</LinearLayout>