<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:orientation="vertical" >


<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginRight="5dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:background="#ffffff"-->

<!--        android:orientation="vertical"-->

<!--        android:layout_marginEnd="5dp">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/title_info_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/title"
                android:textSize="18sp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp" />

            <TextView
                android:id="@+id/title_info_dialog_real"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:textSize="18sp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/time_info_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/time"
                android:textSize="18sp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp" />

            <TextView
                android:id="@+id/time_info_dialog_real"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:textSize="18sp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/width_info_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/width"
                android:textSize="18sp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp" />

            <TextView
                android:id="@+id/width_info_dialog_real"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:textSize="18sp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/height_info_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/height"
                android:textSize="18sp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp" />

            <TextView
                android:id="@+id/height_info_dialog_real"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:textSize="18sp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/size_info_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:text="@string/size"
                android:textSize="18sp"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp" />

            <TextView
                android:id="@+id/size_info_dialog_real"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:textSize="18sp"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <TextView
                android:id="@+id/path_info_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/path"
                android:textSize="18sp"
                android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:layout_marginRight="3dp"
                android:layout_marginEnd="3dp" />

            <TextView
                android:id="@+id/path_info_dialog_real"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                android:textSize="18sp"

                />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/relativeLayout1"
        android:layout_alignTop="@+id/relativeLayout1"
        android:layout_marginRight="-4dp"
        android:layout_marginTop="-5dp"
        android:src="@drawable/ic_close_black_black_24dp"
        android:layout_alignEnd="@+id/relativeLayout1"
        android:layout_marginEnd="-4dp" />

</RelativeLayout>